--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "electron": "^30.0.9",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "update-electron-app": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "electron-squirrel-startup": "^1.0.1",
     "fs": "^0.0.1-security"
-  }
+  },
+  "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771"
 }
