--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
               with:
                     node-version: '20'
             - run: npm install -g pnpm
-            - run: pnpm
+            - run: pnpm install
             - run: pnpm make
             - uses: actions/upload-artifact@v4
               with:
@@ -27,7 +27,7 @@ jobs:
               with:
                     node-version: '20'
             - run: npm install -g pnpm
-            - run: pnpm
+            - run: pnpm install
             - run: pnpm make
             - uses: actions/upload-artifact@v4
               with:
