actions: support macOS Universal

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,3 +49,25 @@ jobs:
         with:
           name: "windows"
           path: "out/**"
+  macos:
+    name: "Build & Upload Mac"
+    runs-on: macos-14
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+      - name: "Setup Node.js 20"
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "yarn"
+      - name: "Install yarn"
+        run: npm install -g yarn
+      - name: "Install Packages on yarn"
+        run: yarn install
+      - name: "Build"
+        run: yarn make
+      - name: "Upload Artifacts"
+        uses: actions/upload-artifact@v4
+        with:
+          name: "windows"
+          path: "out/**"
